# respawn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  stylua.toml
cmake/: Payload.cmake
include/respawn/: chip.h  dfu.h  repl.h
include/respawn/exploit/: driver.h
include/respawn/implant/: client.h  message.h  protocol.h
include/respawn/payload/: builder.h  constants.h  types.h
include/respawn/usb/: client.h  protocol.h
lua/: device.lua  hex.lua  init.lua  interactive.lua  test.lua
src/: main.cpp  repl.cpp
src/exploit/: driver.cpp
src/implant/: client.cpp  message.c
src/payload/: bootstrap.s  builder.cpp  implant.s  t8015_bootstrap.s  t8015_preamble.s  t8015_rop.s
src/usb/: client.cpp
tools/: make_rop.py
